* build-snapshot.html: Converted to XHTML 1.0. 	* compile.html: Likewise. 	* contrib.html: Likewise. 	* docs.html: Likewise. 	* download.html: Likewise. 	* index.html: Likewise. 	* port-files.html: Likewise. 	* port-signals.html: Likewise. 	* port-threads.html: Likewise. 	* projects.html: Likewise. 	* test.html: Likewise. 	* thanks.html: Likewise. 	* tm.html: Likewise.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -17,7 +17,7 @@
 <tr bgcolor="#cccccc">
 <td>
 <pre>
-General gcj download information can be found <A HREF="download.html">here</A>.
+General gcj download information can be found <a href="download.html">here</a>.
 
 1a. <a href="../snapshots.html">Get a GCC snapshot.</a>
 
@@ -64,7 +64,7 @@ you get Libgc from an other cvs or snapshot repository.
   Have a look at the toplevel configure.in (gcc/configure.in) and
   make sure that the variable `noconfigdirs' isn't assigned to
   something (like target-libjava or ${libgcj}.)
-<br>
+<br />
   Also, check for platform-specific assignments of `noconfigdirs' with
   ${libgcj}; if ${libgcj} is listed for your platform, remove it before
   configuring.
@@ -97,7 +97,7 @@ installing gcc and/or configuration options see:
 If you have a broken gas/bin-utils (such as Debian potato) then you
 want to edit the auto-host.h file and remove the definition of
 HAVE_GAS_HIDDEN after configuring, but before typeing make.  See
-<a href=faq.html#5_7>the FAQ</a> for more information.
+<a href="faq.html#5_7">the FAQ</a> for more information.
 </pre>
 </td>
 </tr>
