--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -8,7 +8,7 @@
 
 <GCJNAV>
 
-<br><br>
+<br /><br />
 <h1>Contributing to the GCJ Project</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -18,12 +18,10 @@
  </th>
 </tr>
 </table>
-<br>
+<br />
 
 <p>We've started maintaining a list of <a href="projects.html">useful
-projects</a>.
-
-<p>
+projects</a>.</p>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -32,32 +30,30 @@ projects</a>.
  </th>
 </tr>
 </table>
-<br>
+<br />
 
   <p>All contributions must conform to the <a
   href="http://www.gnu.ai.mit.edu/prep/standards_toc.html">GNU Coding
   Standards</a>.  Submissions which do not conform to the standards will
-  be returned with a request to reformat the changes.
+  be returned with a request to reformat the changes.</p>
 
   <p>Note that the GNU Coding Standards do not actually cover Java
   programming style.  libgcj largely uses the obvious extrapolation
-  from the GNU C style, but there are some differences.
+  from the GNU C style, but there are some differences.</p>
 
-  <p>The changes are something like this:
+  <p>The changes are something like this:</p>
   <ul>
-  <li> Open braces go on a new line (like GNU C style)
+  <li> Open braces go on a new line (like GNU C style) </li>
 
-  <li> Two space indent for methods and inner classes
+  <li> Two space indent for methods and inner classes </li>
 
   <li> <tt>if</tt>, <tt>try</tt>, <tt>for</tt>, and
     <tt>synchronized</tt> blocks are indented four spaces (the braces are
-    indented two spaces, then the code an additional two spaces)
+    indented two spaces, then the code an additional two spaces) </li>
 
   <li> The open brace for a method body is indented only as far as the
-    method header
+    method header </li>
   </ul>
-
-  <p>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -66,7 +62,7 @@ projects</a>.
  </th>
 </tr>
 </table>
-<br>
+<br />
 
   <p>Before we can accept code contributions from you, we need a
   copyright assignment form filled out.  See <a
@@ -82,35 +78,33 @@ projects</a>.
  </th>
 </tr>
 </table>
-<br>
+<br />
 
   <p>Every patch must have several pieces of information before we can
-  properly evaluate it.
+  properly evaluate it.</p>
 
   <ul>
   <li> A description of the bug and how your patch fixes this bug.  For
-       new features a description of the feature and your implementation.
+       new features a description of the feature and your implementation.</li>
   <li> A ChangeLog entry as plaintext; see the various ChangeLog files
-       for format and content.<br>
+       for format and content.<br />
        Note that, unlike some other projects, we do require ChangeLogs
-       also for documentation (i.e., .texi files).
+       also for documentation (i.e., .texi files).</li>
   <li> The patch itself.  If you are accessing the
        CVS repository at Red Hat, use &quot;cvs update; cvs diff -c3p&quot;;
        else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
        If your version of diff does not support these options, then get the
-       latest version of GNU diff.
+       latest version of GNU diff.</li>
   </ul>
 
     <p>Send <tt>libgcj</tt>patches to <a
 	href="mailto:java-patches@gcc.gnu.org">the patch mailing
-	list</a>.  This list is <a href="http://gcc.gnu.org/ml/java-patches/">archived</a>.
+	list</a>.  This list is <a href="http://gcc.gnu.org/ml/java-patches/">archived</a>.</p>
     <p>Patches to the gcj front end -- the <tt>gcc/java</tt> directory --
        should be sent to <a href="mailto:gcc-patches@gcc.gnu.org">the gcc
        patch mailing list</a>.  See <a
        href="../contribute.html">the GCC contribution
-       instructions</a> for more information.
-
-  <p>
+       instructions</a> for more information.</p>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -119,64 +113,63 @@ projects</a>.
  </th>
 </tr>
 </table>
-<br>
+<br />
 
     <p>If you have direct checkin access for libgcj (meaning write
     permission to the gcc repository as well as permission to commit
     your patch to libgcj), please make sure that your checkins follow
-    the standard checkin rules.
+    the standard checkin rules.</p>
 
     <p>First, always make ChangeLog entries.  This is not negotiable;
       a checkin without a ChangeLog entry will be reverted.  If the
-      checkin fixes a bug in Gnats, note this in the entry.
+      checkin fixes a bug in Gnats, note this in the entry.</p>
 
     <p>The commit message given to cvs should be the ChangeLog entry.
       If you wrote the entry (your name is at the top), then don't
       include the header.  If someone else wrote the entry, do include
       the header.  It is customary to make the <tt>cvs commit</tt> log
-      message the same as the ChangeLog entry.
+      message the same as the ChangeLog entry.</p>
 
     <p>If your change fixes a PR, put the text (e.g.)
       ``<tt>Fixes PR java/58</tt>'' into the ChangeLog entry and into the
       cvs commit message.  This will cause an automatic message to be
-      sent to Gnats to record the commit in the PR.
+      sent to Gnats to record the commit in the PR.</p>
 
     <p>After checking in a fix which fixes a PR, put the PR into
       ``feedback'' mode.  This will send email to the bug's
       originator.  In the change message ask them to try the fix and
-      report back.
+      report back.</p>
 
     <p>Once the originator reports back, or after some suitable amount
       of time (less time if you are absolutely sure, beyond any shadow
-      of a doubt, that the bug has been fixed) close the PR.
+      of a doubt, that the bug has been fixed) close the PR.</p>
 
-    <p>
-<br>
+<br />
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
-  <a name=Testing>Testing</a>
+  <a name="Testing">Testing</a>
  </th>
 </tr>
 </table>
-<br>
+<br />
 
-  We're accepting test case patches.<br>
+  We're accepting test case patches.<br />
 
 <ul>
   <li>Put the <tt>.java</tt> file in
       <tt>libjava/testsuite/libjava.compile</tt>
       (if it is an expected compiler failure or other compile-time test --
-      run-time tests usually go in <tt>libjava.lang</tt>)
+      run-time tests usually go in <tt>libjava.lang</tt>)</li>
 
   <li>If the file is "<tt>foo.java</tt>" make a "<tt>foo.xfail</tt>" file.
       For an expected failure the only thing in there should be
-      "<tt>shouldfail</tt>"
+      "<tt>shouldfail</tt>"</li>
 
   <li>If the test case matches a Java PR, it is customary to name it after
-      the PR number.
+      the PR number.</li>
 
-  <li>Send the patch to java-patches and then commit of you're allowed to.
+  <li>Send the patch to java-patches and then commit of you're allowed to.</li>
 </ul>
 
 <p>
@@ -184,6 +177,7 @@ projects</a>.
 There is also some documentation on <a href="test.html">how to run
 test cases</a>.  This covers both our built-in tests and extra test
 suites we use.
+</p>
 
 </GCJNAV>
 
