--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -8,7 +8,7 @@
 
 <GCJNAV>
 
-<br><br>
+<br /><br />
 <h1>Downloading GCJ</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -18,15 +18,17 @@
  </th>
 </tr>
 </table>
-<br>
+<br />
 
+<p>
 The most current official release of GCJ and libgcj is 3.0.2, which is included 
 with the GCC 3.0.2 source distribution. 
+</p>
 <p>
 Follow the links on <a href="http://gcc.gnu.org/releases.html">http://gcc.gnu.org/releases.html</a>
 to download the compiler.  You will need either the full distribution,
 or each of the Core Compiler, C++ and Java distributions.
-<p>
+</p>
 
 
 <table border="0" cellpadding="4" width="95%">
@@ -36,11 +38,13 @@ or each of the Core Compiler, C++ and Java distributions.
  </th>
 </tr>
 </table>
+<br />
+
 <p>
 Many GNU/Linux distributions now include relatively recent, "QA'ed" versions of 
 GCJ which should work out-of-the-box. Look for packages like "gcc-java" and
 "gcc-libgcj" to add Java language support to your existing GCC installation.
-<p>
+</p>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -49,11 +53,12 @@ GCJ which should work out-of-the-box. Look for packages like "gcc-java" and
  </th>
 </tr>
 </table>
-<br>
+<br />
 
+<p>
 The latest development sources are available both as periodic
 snapshots, and directly from the cvs source repository.
-
+</p>
 <p>
 Please note that the current development source tree may occasionally have 
 bugs which prevent it from compiling or running; however, when these problems 
@@ -61,36 +66,41 @@ occur we try to fix them immediately. Please
 <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">submit a problem report</a> if you are
 using the development sources and run into such a problem.
 If you are going to build from source you want to read the
-<a href=faq.html#3_0>Build Issues FAQ</a>.
+<a href="faq.html#3_0">Build Issues FAQ</a>.
+</p>
 
 <h3>Snapshots</h3>
+<p>
 Snapshots of the current CVS tree are made about once a week.  They are 
 available from <a href="http://gcc.gnu.org/snapshots.html">
 http://gcc.gnu.org/snapshots.html</a>.
-<p>
+</p>
 
-<h3><a name=cvs>cvs</a></h3> 
+<h3><a name="cvs">cvs</a></h3> 
 
 The easiest way to get GCJ (and keep it up to date) is to check it out from 
 the GCC cvs repository. Follow the links below for instructions: 
 
 <ul>
-<li><A HREF="http://gcc.gnu.org/cvs.html">read-only (anonymous) CVS access</A></li>
-<li><A HREF="http://gcc.gnu.org/cvswrite.html">read-write CVS access</A></li>
+<li><a href="http://gcc.gnu.org/cvs.html">read-only (anonymous) CVS access</a></li>
+<li><a href="http://gcc.gnu.org/cvswrite.html">read-write CVS access</a></li>
 </ul>
 
 <h3>cvsweb</h3>
 
+<p>
 You can also view the libgcj component cvs archive: the 
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/boehm-gc/">boehm-gc</A>,
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libffi/">libffi</A>,
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libjava/">libjava</A>,
-and <A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">fastjar</A>.
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/boehm-gc/">boehm-gc</a>,
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libffi/">libffi</a>,
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libjava/">libjava</a>,
+and <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">fastjar</a>.
+</p>
 <p>
 Here's the Java front end <a
 href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java/">cvs
 archive</a> (the entire compiler is also 
 <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/">available</a>.)
+</p>
 
 </GCJNAV>
 
