--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -8,7 +8,7 @@
 
 <GCJNAV>
 
-<br><br>
+<br /><br />
 <h1>GCJ Credits</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -18,7 +18,7 @@
  </th>
 </tr>
 </table>
-<br>
+<br />
 
 Many people contribute to the GCJ project, and in many different
 capacities.  Any omissions to this list are accidental.  Feel free to
@@ -26,115 +26,114 @@ contact <a href="mailto:green@cygnus.com">green@cygnus.com</a> if you
 have been left out or some of your contributions are not listed.
 <!-- Please keep this list in alphabetical order. -->
 
-<p>
 <ul>
-<li>Godmar Back for his improvements and encouragement.
-<li>Scott Bambrough for help porting the compiler.
-<li>Jon Beniston for his Win32 port.
-<li>Geoff Berry for his object serialization work and various patches.
+<li>Godmar Back for his improvements and encouragement.</li>
+<li>Scott Bambrough for help porting the compiler.</li>
+<li>Jon Beniston for his Win32 port.</li>
+<li>Geoff Berry for his object serialization work and various patches.</li>
 <li>Eric Blake for helping to make gcj and libgcj conform to the
-specifications.
+specifications.</li>
 <li>Hans-J. Boehm for his <a
 href="http://www.hpl.hp.com/personal/Hans_Boehm/gc/">garbage
-collector</a>, IA-64 libffi port, and other work.
-<li>Per Bothner for dreaming up, designing and implementing much of gcj.
-<li>Joerg Brunsmann for compiler hacking and help with the FAQ.
-<li>Steve Chamberlain for config fixes and the picoJava port.
-<li>Glenn Chambers for help with the FAQ.
-<li>John-Marc Chandonia for various library patches.
-<li>Eric Christopher for his porting help and clean-ups.
+collector</a>, IA-64 libffi port, and other work.</li>
+<li>Per Bothner for dreaming up, designing and implementing much of gcj.</li>
+<li>Joerg Brunsmann for compiler hacking and help with the FAQ.</li>
+<li>Steve Chamberlain for config fixes and the picoJava port.</li>
+<li>Glenn Chambers for help with the FAQ.</li>
+<li>John-Marc Chandonia for various library patches.</li>
+<li>Eric Christopher for his porting help and clean-ups.</li>
 <li>The <a href="http://www.classpath.org">GNU Classpath project</a>
-for all of their merged runtime code.
-<li>Mo DeJong for gcj and libgcj bug fixes.
+for all of their merged runtime code.</li>
+<li>Mo DeJong for gcj and libgcj bug fixes.</li>
 <li>The GCC project <a
 href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">contributors</a>
-for all of their great compiler work.
-<li>Ivan Fontes Garcia for the Portugese translation of the FAQ.
-<li>John Gilmore for a donation to the FSF earmarked improving GNU Java.
-<li>Anthony Green for various contributions.
-<li>Stu Grossman for gdb hacking, allowing us to debug our code.
-<li>Andrew Haley for his amazing compiler and library efforts.
-<li>Jakub Jelinek for improving the build system.
-<li>Warren Levy for his tremendous library work.
-<li>Oskar Liljeblad for hacking on AWT and his many bug reports and patches.
+for all of their great compiler work.</li>
+<li>Ivan Fontes Garcia for the Portugese translation of the FAQ.</li>
+<li>John Gilmore for a donation to the FSF earmarked improving GNU Java.</li>
+<li>Anthony Green for various contributions.</li>
+<li>Stu Grossman for gdb hacking, allowing us to debug our code.</li>
+<li>Andrew Haley for his amazing compiler and library efforts.</li>
+<li>Jakub Jelinek for improving the build system.</li>
+<li>Warren Levy for his tremendous library work.</li>
+<li>Oskar Liljeblad for hacking on AWT and his many bug reports and patches.</li>
 <li>All of the Mauve project <a
-href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>,
-for test code.
-<li>Bryce McKinlay for numerous gcj and libgcj fixes and improvements.
-<li>Adam Megacz for his work on the Win32 port.
+href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&amp;cvsroot=mauve&amp;only_with_tag=HEAD">contributors</a>,
+for test code.</li>
+<li>Bryce McKinlay for numerous gcj and libgcj fixes and improvements.</li>
+<li>Adam Megacz for his work on the Win32 port.</li>
 <li>Jason Molenda for establishing the project infrastructure on
-<a href="http://sources.redhat.com">sources.redhat.com</a>.
-<li>Mike Moreton for his various patches.
-<li>Alexandre Oliva for all of this porting and testing efforts.
-<li>Rainer Orth for configuration clean-ups and porting help.
+<a href="http://sources.redhat.com">sources.redhat.com</a>.</li>
+<li>Mike Moreton for his various patches.</li>
+<li>Alexandre Oliva for all of this porting and testing efforts.</li>
+<li>Rainer Orth for configuration clean-ups and porting help.</li>
 <li>Alexandre Petit-Bianco for implementing much of the compiler, and
-continued maintainership.
-<li>Rolf W. Rasmussen for hacking on AWT.
-<li>Bradley Schatz for his work on the FAQ.
-<li>Jason Schroeder for jcf-dump patches.
-<li>John Stracke for his HTTP protocol fixes.
-<li>Jeff Sturm for porting help, bug fixes, and encouragement.
-<li>Kresten Krab Thorup for his fantastic bytecode interpreter.
-<li>Andreas Tobler for his work porting libgcj to Darwin.
-<li>Tom Tromey for his many contributions and libgcj maintainership.
-<li>Matt Welsh for help with Linux Threads.
-<li>Urban Widmark for help fixing java.io.
-<li>Mark Wielaard for new library code and his work integrating with Classpath.
-<li>Gilles Zunino for help porting to Irix.
+continued maintainership.</li>
+<li>Rolf W. Rasmussen for hacking on AWT.</li>
+<li>Bradley Schatz for his work on the FAQ.</li>
+<li>Jason Schroeder for jcf-dump patches.</li>
+<li>John Stracke for his HTTP protocol fixes.</li>
+<li>Jeff Sturm for porting help, bug fixes, and encouragement.</li>
+<li>Kresten Krab Thorup for his fantastic bytecode interpreter.</li>
+<li>Andreas Tobler for his work porting libgcj to Darwin.</li>
+<li>Tom Tromey for his many contributions and libgcj maintainership.</li>
+<li>Matt Welsh for help with Linux Threads.</li>
+<li>Urban Widmark for help fixing java.io.</li>
+<li>Mark Wielaard for new library code and his work integrating with Classpath.</li>
+<li>Gilles Zunino for help porting to Irix.</li>
 </ul>
 
 We'd also like to thank the folks who have contributed time and energy
 in testing GCJ:
 
 <ul>
-<li>Michael Abd-El-Malek
-<li>Thomas Arend
-<li>Bonzo Armstrong
-<li>Steven Ashe
-<li>Chris Baldwin
-<li>David Billinghurst
-<li>Jim Blandy
-<li>Stephane Bortzmeyer
-<li>Frank Braun
-<li>Sidney Cadot
-<li>Bradford Castalia
-<li>Ralph Doncaster
-<li>Richard Emberson
-<li>Graham Fawcett
-<li>Robert A. French
-<li>Mark K. Gardner
-<li>Charles-Antoine Gauthier
-<li>Simon Gornall
-<li>Fred Gray
-<li>John Griffin
-<li>Patrik Hagglund
-<li>Phil Hargett
-<li>Amancio Hasty 
-<li>Bryan W. Headley
-<li>Kevin B. Hendricks
-<li>Joep Jansen
-<li>David Kidd
-<li>Tobias Kuipers
-<li>Anand Krishnaswamy
-<li>H.J. Lu
-<li>Jesse Macnish
-<li>Anon A. Mous
-<li>Stefan Morrell
-<li>Pekka Nikander
-<li>Jon Olson
-<li>Magnus Persson
-<li>Chris Pollard
-<li>Paul Reilly
-<li>Tom Reilly
-<li>Torsten Rueger
-<li>Danny Sadinoff
-<li>Marc Schifer
-<li>Franz Sirl
-<li>Tim Souder
-<li>Adam Sulmicki
-<li>Frederik Warg
-<li>Gregory Warnes
-<li>David E. Young
+<li>Michael Abd-El-Malek</li>
+<li>Thomas Arend</li>
+<li>Bonzo Armstrong</li>
+<li>Steven Ashe</li>
+<li>Chris Baldwin</li>
+<li>David Billinghurst</li>
+<li>Jim Blandy</li>
+<li>Stephane Bortzmeyer</li>
+<li>Frank Braun</li>
+<li>Sidney Cadot</li>
+<li>Bradford Castalia</li>
+<li>Ralph Doncaster</li>
+<li>Richard Emberson</li>
+<li>Graham Fawcett</li>
+<li>Robert A. French</li>
+<li>Mark K. Gardner</li>
+<li>Charles-Antoine Gauthier</li>
+<li>Simon Gornall</li>
+<li>Fred Gray</li>
+<li>John Griffin</li>
+<li>Patrik Hagglund</li>
+<li>Phil Hargett</li>
+<li>Amancio Hasty </li>
+<li>Bryan W. Headley</li>
+<li>Kevin B. Hendricks</li>
+<li>Joep Jansen</li>
+<li>David Kidd</li>
+<li>Tobias Kuipers</li>
+<li>Anand Krishnaswamy</li>
+<li>H.J. Lu</li>
+<li>Jesse Macnish</li>
+<li>Anon A. Mous</li>
+<li>Stefan Morrell</li>
+<li>Pekka Nikander</li>
+<li>Jon Olson</li>
+<li>Magnus Persson</li>
+<li>Chris Pollard</li>
+<li>Paul Reilly</li>
+<li>Tom Reilly</li>
+<li>Torsten Rueger</li>
+<li>Danny Sadinoff</li>
+<li>Marc Schifer</li>
+<li>Franz Sirl</li>
+<li>Tim Souder</li>
+<li>Adam Sulmicki</li>
+<li>Frederik Warg</li>
+<li>Gregory Warnes</li>
+<li>David E. Young</li>
 </ul>
 
 Thank you all!
