--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -8,7 +8,7 @@
 
 <GCJNAV>
 
-<br><br>
+<br /><br />
 <h1>GCJ Documentation</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -18,20 +18,20 @@
  </th>
 </tr>
 </table>
-<br>
+<br />
 
 
     <ul>
-      <li>General <a href="gcj2.html">gcj</a> information.
-      <li>General <a href="libgcj2.html">runtime</a> information.
-      <li>How to <a href="compile.html">compile</a> a Java program.
-      <li>How to <a href="gdb.html">debug</a> a Java program using GDB.
-      <li><a href="faq.html">Frequently Asked Questions</a>
-      <li>How to <a href="contrib.html">contribute</a>
-      <li><a href="papers/cni/t1.html">CNI Documentation</a>
+      <li>General <a href="gcj2.html">gcj</a> information.</li>
+      <li>General <a href="libgcj2.html">runtime</a> information.</li>
+      <li>How to <a href="compile.html">compile</a> a Java program.</li>
+      <li>How to <a href="gdb.html">debug</a> a Java program using GDB.</li>
+      <li><a href="faq.html">Frequently Asked Questions</a>.</li>
+      <li>How to <a href="contrib.html">contribute</a>.</li>
+      <li><a href="papers/cni/t1.html">CNI Documentation</a>.</li>
     </ul>
 
-<br>
+<br />
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -39,18 +39,18 @@ Porting the GCJ runtime.
  </th>
 </tr>
 </table>
-<br>
+<br />
 
 We've written three documents on how to port various components of
 GCJ runtime, libgcj, to different target systems.
 
 <ul>
-<li>How to <a href="port-threads.html">port</a> the thread layer.
-<li>How to <a href="port-files.html">port</a> the file handling layer.
-<li>How to <a href="port-signals.html">port</a> the signal handling layer.
+<li>How to <a href="port-threads.html">port</a> the thread layer.</li>
+<li>How to <a href="port-files.html">port</a> the file handling layer.</li>
+<li>How to <a href="port-signals.html">port</a> the signal handling layer.</li>
 </ul>
 
-<br>
+<br />
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -58,38 +58,38 @@ Papers describing our work
  </th>
 </tr>
 </table>
-<br>
+<br />
 
 <p>The engineers on this project have written a number of papers for
-conferences and magazines.
+conferences and magazines.</p>
 
 <ul>
   <li><a name="CNI">
-      <b>February 1999</b>: "<cite>The Cygnus Native Interface for C++/Java Integration</cite>".
-       <br>[<a href="papers/cni/t1.html">HTML</a>] 
-           [<a href="papers/cni.sgml">SGML/Docbook source</a>]
-       <br>This is a programmer's manual which explains how to use
+      <b>February 1999</b>: "<cite>The Cygnus Native Interface for C++/Java Integration</cite>".</a>
+       <br />[<a href="papers/cni/t1.html">HTML</a>] 
+             [<a href="papers/cni.sgml">SGML/Docbook source</a>]
+       <br />This is a programmer's manual which explains how to use
        a Java-aware C++ compiler (G++) to write native methods for Gcj.
-       <br>The CNI design and ideas were proposed in
+       <br />The CNI design and ideas were proposed in
        "<cite>Writing native Java methods in natural C++</cite>"
-       (November 1997).</a>
-       <p>
+       (November 1997).
+       </li>
 
   <li><b>August 1998</b>: "<cite>No Silver Bullet - Garbage Collection for 
       Java in Embedded Systems</cite>".
-      <br>[<a href="papers/nosb.html">HTML</a>] 
-          [<a href="papers/nosb.ps.gz">PS for presentation slides</a>]
-      <br>Author: Alex Petit-Bianco.
-      <p>
+      <br />[<a href="papers/nosb.html">HTML</a>] 
+            [<a href="papers/nosb.ps.gz">PS for presentation slides</a>]
+      <br />Author: Alex Petit-Bianco.
+      </li>
 
   <li><b>November 1997</b>:  "<cite>Writing native Java methods in natural C++</cite>"
       discusses interaction between Java and C++.  This is an early design
       document;  see "<cite>The Cygnus Native Interface for C++/Java 
       Integration</cite>" (February 1998) for the programmer's manual.
-      <br>[<a href="papers/native++.html">HTML</a>] 
-          [<a href="papers/native++.sgml">SGML/Docbook source</a>]
-      <br>Author: <a href="http://www.bothner.com/">Per Bothner</a>.
-      <p>
+      <br />[<a href="papers/native++.html">HTML</a>] 
+            [<a href="papers/native++.sgml">SGML/Docbook source</a>]
+      <br />Author: <a href="http://www.bothner.com/">Per Bothner</a>.
+      </li>
 
   <li><b>October 1997</b>: "<cite>Compiling Java for Embedded
       Systems</cite>" was presented by Per Bothner at the Embedded
@@ -97,27 +97,27 @@ conferences and magazines.
       overview of our strategy and plans at the time.  This is fairly
       out of date now.
 
-      <br>[<a href="papers/compjava.pdf">PDF</a>] 
-          [<a href="papers/compjava.ps.gz">gzip'd Postscript</a>] 
-          [<a href="papers/esc97.sgml">SGML/Docbook source</a>] 
-          [<a href="papers/esc97w-slides.ps.gz">PS 
-          for presentation slides</a>].
+      <br />[<a href="papers/compjava.pdf">PDF</a>] 
+            [<a href="papers/compjava.ps.gz">gzip'd Postscript</a>] 
+            [<a href="papers/esc97.sgml">SGML/Docbook source</a>] 
+            [<a href="papers/esc97w-slides.ps.gz">PS 
+            for presentation slides</a>].
 
-      <br>Author: <a href="http://www.bothner.com/">Per Bothner</a>.
-      <p>
+      <br />Author: <a href="http://www.bothner.com/">Per Bothner</a>.
+      </li>
 
   <li><b>February 1997</b>: "<cite>A Gcc-based Java Implementation</cite>" is an older paper
       presented by Per Bothner
       at IEEE Compcon.  
-      <br>[<a href="papers/gcc-java.html">extended
-          abstract (HTML)</a>] 
-          [<a href="papers/gcc-java.ps.gz">complete
-          paper (Postscript)</a>]
-          [(<a href="papers/compcon97.ps.gz">slides 
-          for presentation</a>)]
+      <br />[<a href="papers/gcc-java.html">extended
+            abstract (HTML)</a>] 
+            [<a href="papers/gcc-java.ps.gz">complete
+            paper (Postscript)</a>]
+            [(<a href="papers/compcon97.ps.gz">slides 
+            for presentation</a>)]
 
-      <br>Author: <a href="http://www.bothner.com/">Per Bothner</a>.
-      <p>
+      <br />Author: <a href="http://www.bothner.com/">Per Bothner</a>.
+      </li>
 
 </ul>
 
