--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -1,10 +1,12 @@
 <html>
+<head>
 <title>GCJ: The GNU Compiler for Java: Home Page</title>
-<body bgcolor="white">
+</head>
+<body>
 
 <GCJNAV>
 
-<br>
+<br />
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -14,13 +16,13 @@
  </th>
 </tr>
 </table>
-<br>
+<br />
 GCJ is a portable, optimizing, ahead-of-time compiler for the Java
 Programming Language.  It can compile:
 <ul>
-<li>Java source code directly to native machine code,
-<li>Java source code to Java bytecode (class files),
-<li>and Java bytecode to native machine code.
+<li>Java source code directly to native machine code,</li>
+<li>Java source code to Java bytecode (class files),</li>
+<li>and Java bytecode to native machine code.</li>
 </ul>
 
 Compiled applications are linked with the GCJ runtime,
@@ -30,34 +32,34 @@ dynamically load and interpret class files, resulting in mixed
 compiled/interpreted applications.
 
 <p>
-
 Most of the APIs specified by "The Java Class Libraries" Second
 Edition and the "Java 2 Platform supplement" are supported, including
 collections, networking, reflection, and serialization. AWT is
 currently unsupported, but work to implement it is in progress.
+</p>
 
 <p>
-
 Debugging is supported using recent versions of the
 GNU debugger, <a href="http://sources.redhat.com/gdb/">GDB</a>.
 A <a href="gdb.html">short tutorial</a> on using GDB to debug
 GCJ-compiled applications is available.
+</p>
 
 <p>
-
 In addition to regular native programming, GCJ can be configured as a
 cross-compiler, suitable for embedded systems programming.
+</p>
 
 <p>
-
-GCJ is part of the GNU Compiler Collection (<A HREF="../">GCC</A>). GCC, 
+GCJ is part of the GNU Compiler Collection (<a href="../">GCC</a>). GCC, 
 GDB and related tools are 
 <a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  
 libgcj is slowly being merged with <a
 href="http://www.gnu.org/software/classpath/">GNU Classpath</a>.  (You
 can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
-<br>
-<br>
+</p>
+<br />
+<br />
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -80,7 +82,7 @@ to disable assignability checks for stores into object arrays. With
 code that is known not to throw <code>ArrayStoreException</code>, this
 flag can be used to disable the check operations. In which case it can
 provide a reasonable performance boost and slight code size reduction.
-</td><tr>
+</td></tr>
 
 <tr><td valign="top">
 <b>January 22, 2002</b>
@@ -165,9 +167,9 @@ contribution.
 <tr><td valign="top">
 <b>June 18, 2001</b>
 </td><td>
-<B>GCC 3.0 has been released!</B> Everything you need to build and run GCJ is now 
+<b>GCC 3.0 has been released!</b> Everything you need to build and run GCJ is now 
 included in a single source distribution. Download it from one of our
-<A HREF="../mirrors.html">mirror sites</A>.
+<a href="../mirrors.html">mirror sites</a>.
 </td></tr>
 
 <tr><td valign="top">
