Link to the Postscript versions of the CPP pages for 3.0.3 and 3.0.4, even if the HTML versions don't exist. Originally by Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -30,6 +30,9 @@
          3.0.4 GCJ Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/gcj.ps.gz">also
          in PostScript</a>)</li>
+    <li>GCC 3.0.4 CPP Manual (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.4/cpp.ps.gz">only
+         in PostScript</a>)</li>
   </ul></li>
 
   <li>GCC 3.0.3 manuals:
@@ -46,12 +49,9 @@
          3.0.3 GCJ Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/gcj.ps.gz">also
          in PostScript</a>)</li>
-<!--
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/cpp.html">GCC
-         3.0.3 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/cpp.ps.gz">also
+    <li>GCC 3.0.3 CPP Manual (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.3/cpp.ps.gz">only
          in PostScript</a>)</li>
--->
   </ul></li>
   <li>GCC 3.0.2 manuals:
   <ul>
