--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -45,20 +45,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
-<dt><em>PR 5597</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Initialization of flexible char array member.  Regression from GCC
- 2.95.3.</p>
-
- <p>Patch available at <a
- href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00959.html"
- >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00959.html</a>.</p>
-
- <p>Submitted by Craig Rodrigues.</p>
-</dd>
-
 <dt><em>Optimization Issues</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -67,15 +53,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  http://gcc.gnu.org/ml/libstdc++/2002-03/msg00018.html</a>.</p>
 
  <p>Submitted by Benjamin Kosnik.</p>
-</dd>
-
-<dt><em>PR 5863</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Regression from GCC 2.95.x.</p>
-
- <p>Submitted by Franz Sirl.</p>
 </dd>
 
 <dt><em>PR 5396</em></dt>
@@ -123,15 +100,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by David Billinghurst.</p>
 </dd>
 
-<dt><em>PR 5854</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>m68K showstopper preventing building libgcc.</p>
-
- <p>Submitted by Stephane Carrez.</p>
-</dd>
-
 <dt><em>PR optimization/5768</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -163,7 +131,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 <dd>
  <p><em>Unverified.</em></p>
 
- <p>V3 does not build on mcor-elf.</p>
+ <p>V3 does not build on mcore-elf.</p>
 
  <p>Submitted by Joel Sherrill.</p>
 </dd>
@@ -172,16 +140,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 <dd>
  <p><em>Unverified.</em></p>
 
- <p>V3 does not build on mcor-elf.</p>
-
- <p>Submitted by Joel Sherrill.</p>
-</dd>
-
-<dt><em>V850 ICE</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>libiberty does not build on v850.</p>
+ <p>V3 does not build on mcore-elf.</p>
 
  <p>Submitted by Joel Sherrill.</p>
 </dd>
@@ -543,6 +502,43 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Regression from GCC 3.0.</p>
 
  <p>Submitted by Philip Blundell.</p>
+</dd>
+
+<dt><em>PR 5597</em></dt>
+<dd>
+ <p>Closed: Richard Henderson, patch by Eric Botcazou.</p>
+
+ <p>Initialization of flexible char array member.  Regression from GCC
+2.95.3.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
+
+<dt><em>PR 5863</em></dt>
+<dd>
+ <p>Closed: Richard Henderson.</p>
+
+ <p>Regression from GCC 2.95.x.</p>
+
+ <p>Submitted by Franz Sirl.</p>
+</dd>
+
+<dt><em>PR 5854</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>m68K showstopper preventing building libgcc.</p>
+
+ <p>Submitted by Stephane Carrez.</p>
+</dd>
+
+<dt><em>V850 ICE</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek.</p>
+
+ <p>libiberty does not build on v850.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
 </dd>
 
 </dl>
