--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -145,6 +145,15 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Joel Sherrill.</p>
 </dd>
 
+<dt><em>V850 ICE</em></dt>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>libiberty does not build on v850.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
 <dt><em>PR 4191</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -152,15 +161,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>crtbegin.o does not build on d30v-elf.</p>
 
  <p>Submitted by Joel Sherrill.</p>
-</dd>
-
-<dt><em>PR 5899</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Preprocessor breaks building glibc.</p>
-
- <p>Submitted by Andreas Schwab.</p>
 </dd>
 
 <dt><em>PR 5998</em></dt>
@@ -502,6 +502,15 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Regression from GCC 3.0.</p>
 
  <p>Submitted by Philip Blundell.</p>
+</dd>
+
+<dt><em>PR 5899</em></dt>
+<dd>
+ <p><em>Closed: Neil Booth.</em></p>
+
+ <p>Preprocessor breaks building glibc.</p>
+
+ <p>Submitted by Andreas Schwab.</p>
 </dd>
 
 <dt><em>PR 5597</em></dt>
