--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -1,5 +1,7 @@
+<html>
+
 <head>
-<title> gcj 3.1 status </title
+<title> gcj 3.1 status </title>
 </head>
 
 <body bgcolor="#fffffff">
@@ -7,11 +9,11 @@
 
 <h2> Bugs </h2>
 
-<table border=1 width="100%">
+<table border="1" width="100%">
 
 <tr><th> Issue </th> <th> Status </th> <th> Who </th> </tr>
 
-<tr bgcolor='#eeaaaa'> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=4715">4715</a> </td>
+<tr bgcolor='#eeaaaa'> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;cmd=view&amp;pr=4715">4715</a> </td>
      <td> Tree check failure in check_inner_circular_reference.
           Prevents Classpath from building.  Regression from 3.0.4.
 	  Patch in PR; Alex says it causes failures
@@ -19,7 +21,7 @@
      <td> Alex </td>
 </tr>
 
-<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&cmd=view&pr=5942">5942</a> </td>
+<tr> <td> <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;cmd=view&amp;pr=5942">5942</a> </td>
      <td> Classpath build failure </td>
      <td> Alex </td>
 </tr>
@@ -29,7 +31,7 @@
 
 <h2> Platforms </h2>
 
-<table border=1 width="100%">
+<table border="1" width="100%">
 
 <tr><th> Platform </th> <th> Status </th> <th> Who </th> </tr>
 
@@ -100,7 +102,7 @@
 
 <tr bgcolor="#eeaaaa"> <td>alpha-dec-osf4.0f</td>
      <td> <a
-     href=""http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00478.html>Many
+     href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00478.html">Many
      regression failures</a> </td>
      <td> Unknown </td>
 </tr>
@@ -119,7 +121,7 @@
 
 <h2> Packages </h2>
 
-<table border=1 width="100%">
+<table border="1" width="100%">
 
 <tr><th> Package </th> <th> Status </th> <th> Who </th> </tr>
 
@@ -141,3 +143,5 @@
 </table>
 
 </body>
+
+</html>
