--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -17,7 +17,7 @@ has been reintroduced.  <em>Note that such differences cannot be
 automatically merged.</em> Any merging must be done manually; some
 differences are currently required.</p>
 
-<table border=1 width="100%">
+<table border="1" width="100%">
 <tr><th>Class</th> <th>libgcj</th> <th>Classpath</th> <th>Merge Status</th> </tr>
 <tr> <td>java.awt.Polygon</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.ScrollPane</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
