--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -11,24 +11,24 @@
 <h2> Platform Coverage </h2>
 <p>One of the critical steps in making releases is platform testing.  
 Since there is no prior release of libgcj to perform regressions against,
-we want to compare results against a known building platform, i686-pc-linux-gnu.
+we want to compare results against a known building platform, i686-pc-linux-gnu.</p>
 
 <p>We would like to get the widest coverage possible, so please check the
 following chart for platforms that have already been covered if you have
-a choice of platforms to build upon.
+a choice of platforms to build upon.</p>
 
 <p>Please send build/test results (in the format described below) to
 <a href="mailto:java@gcc.gnu.org">java@gcc.gnu.org</a>.
-<br>You may also address questions to 
+<br />You may also address questions to 
 <a href="mailto:java@gcc.gnu.org">java-discuss</a>
 or to indicate that you would like to help in another way with some phase of the
-libgcj-2.95 release cycle.
+libgcj-2.95 release cycle.</p>
 
 <h2>How to run the tests</h2>
 
 <p>  First, you must have built and installed
 <a href="libgcj.html">libgcj</a> using the
-<b>libgcj-2_95-branch</b> branch of the source.
+<b>libgcj-2_95-branch</b> branch of the source.</p>
 <p>This can be done by including the <tt>'-rlibgcj-2_95-branch'</tt>
 flag on the <tt>'cvs co'</tt> command line or downloading the
 <a href="ftp://sources.redhat.com/pub/java/snapshots/">snapshot</a>
@@ -39,19 +39,19 @@ build instructions on the libgcj page</a>.
 the snapshoting process has been temporarily changed to use the
 <tt>libgcj-2_95-branch</tt> rather than the main trunk.
 Please be aware of this if you are looking for patches that get applied
-to the main source tree but not to the branch).
+to the main source tree but not to the branch).</p>
 
 <p>  Next, go to the <tt>libjava/testsuite</tt> directory of your build
-tree and run <tt>'make check'</tt> after doing the following:
+tree and run <tt>'make check'</tt> after doing the following:</p>
 <ul>
   <li>In order to more fully exercise libgcj, it is highly recommended to
   include the 
   <a href="http://sources.redhat.com/mauve/">Mauve testsuite</a>
   in the test run.
-  <br>The Mauve tests are available for
+  <br />The Mauve tests are available for
   <a href="http://sources.redhat.com/mauve/download.html">download</a>
-  via both anonymous cvs and snapshots.
-  <li>The env variable MAUVEDIR must be set to the top of the Mauve source tree
+  via both anonymous cvs and snapshots.</li>
+  <li>The env variable MAUVEDIR must be set to the top of the Mauve source tree.</li>
   <li>The testsuites rely on the dejagnu package.  You can download the
   <a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/dejagnu-19990614.tar.gz">current dejagnu snapshot</a>
   from gcc.  Please note that some earlier versions of dejagnu are missing a
@@ -59,18 +59,18 @@ tree and run <tt>'make check'</tt> after doing the following:
   running the testsuites with the current snapshot of dejagnu before reporting
   any testsuite platform problems.  There is a short entry in the
   <a href="http://gcc.gnu.org/faq.html#dejagnu">gcc FAQ</a>
-  if you would like more information about this issue.
+  if you would like more information about this issue.</li> 
 </ul>
 
 <h2>Testing notes</h2>
 <ul>
   <li>By default, tests that first compile to bytecode use an installed
   <tt>javac</tt> program.  Set the environment variable <tt>JAVAC</tt>
-  to <tt>'gcj -C'</tt> to use the installed gcj for this purpose.
+  to <tt>'gcj -C'</tt> to use the installed gcj for this purpose.</li> 
   <li> It is highly recommended that you not override the default libgcj
   configuration option for building with dynamic libraries.  This is to avoid
   having to explicitly specify some libgcj object modules on the link line
-  to get certain java/net Mauve tests to execute.
+  to get certain java/net Mauve tests to execute.</li> 
   <li>An gcc patch affecting <tt>gcj</tt> was made on 24-June-99.
   Developers using cvs to access the gcc source should update an rebuild
   to get that fix.  The next
@@ -85,13 +85,13 @@ tree and run <tt>'make check'</tt> after doing the following:
    GCJ_UNDER_TEST='gcj -L/x2/java/install/lib' check
   </pre>
   i.e. GCJ_UNDER_TEST needs a -L pointing to the libjava build directory and
-  JAVAC needs a -I pointing to the zip file.
+  JAVAC needs a -I pointing to the zip file.</li> 
 </ul>
 
 <h2>Current Platform Testing Status</h2>
 <p>This is the current results for the platforms reported to us.  Please use
 this format when reporting your results.
-<p>
+</p>
 <table border="2"
 cellpadding="2">
 <tr>
@@ -120,9 +120,9 @@ OK
 </td>
 <td>
 # of expected passes		1876
-<br>
+<br />
 # of unexpected failures	32
-<br>
+<br />
 # of expected failures		6
 </td>
 </tr>
@@ -132,17 +132,17 @@ alphapca56-unknown-linux-gnu
 </td>
 <td>
 --enable-threads=posix
-<br>--enable-fast-character
-<br>--enable-java-gc=boehm
+<br />--enable-fast-character
+<br />--enable-java-gc=boehm
 </td>
 <td>
 OK
 </td>
 <td>
 # of expected passes		187
-<br>
+<br />
 # of unexpected failures	19
-<br>
+<br />
 # of expected failures		18
 </td>
 </tr>
@@ -157,9 +157,9 @@ OK
 </td>
 <td>
 # of expected passes		60
-<br>
+<br />
 # of unexpected failures	68
-<br>
+<br />
 # of expected failures		96
 </td>
 </tr>
@@ -175,9 +175,9 @@ OK
 </td>
 <td>
 # of expected passes		196
-<br>
+<br />
 # of unexpected failures	22
-<br>
+<br />
 # of expected failures		8
 </td>
 </tr>
@@ -188,21 +188,21 @@ OK
 should follow any entry you submit.
 A context diff is fine if it is clear what tests are failing;
 we'd rather not have to deal with a complete output listing unless
-it is necessary to comprehend the deviations.
+it is necessary to comprehend the deviations.</p>
 <p>Note that if you are not using POSIX threads, some tests will not complete  
-successfully, so differences should be expected.
+successfully, so differences should be expected.</p>
  
 <p>Please send build/test results to
 <a href="mailto:java@gcc.gnu.org">java@gcc.gnu.org</a>
-in this format.
+in this format.</p>
 
 <h2>Submitting Patches</h2>
-<tt>libgcj-2.95</tt> should be considered frozen except for low-risk
+<p><tt>libgcj-2.95</tt> should be considered frozen except for low-risk
 porting changes that increase coverage to new target platforms
 (i.e. those changes that would not affect other platforms).
 High priority changes will be determined and considered on a case
 by case basis.  All other changes will only go into the main trunk
-and not the libgcj-2_95-branch.
+and not the libgcj-2_95-branch.</p>
 
 <p>The mailing list, 
 <a href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>
@@ -210,26 +210,26 @@ has been created for patch submissions.
 We plan to use this list just as gcc uses the gcc-patches list: all
 patches will be sent to the list.
 If you have a patch you want considered, please send it there along
-with an explanation and a ChangeLog entry.
+with an explanation and a ChangeLog entry.</p>
 
 <p>Developers with checkin-after-approval access should also send patches
 to this list, and then check them in after approval is given.
 Developers with direct checkin access should also send patches to this
-list; this can happen concurrently with the checkin.
+list; this can happen concurrently with the checkin.</p>
 
 <p>Some discussion will probably take place on this list (just as with
 gcc-patches).  The 
 <a href="/java/">web page has subscription info</a>,
 as well as a
 <a href="http://gcc.gnu.org/ml/java-patches/">
-link to the archives</a>.
+link to the archives</a>.</p>
 
 <p>The
 <a href="mailto:java-patches@gcc.gnu.org">java-patches</a>
 mailing list is for patches to the libgcj code
 (libjava, boehm-gc, zlib, etc) code only.
 In particular, compiler patches still have to go through gcc, so
-please don't send them to java-patches.
+please don't send them to java-patches.</p>
 
 </body>
 </html>
