--- a/htdocs/java/merge-status.html
+++ b/htdocs/java/merge-status.html
@@ -8,7 +8,7 @@
 
 <h1>Classpath / libgcj merge status</h1>
 
-<table border=1 width="100%">
+<table border="1" width="100%">
 <tr> <th width="50%">File</th> <th>Status</th> <th>Notes</th> </tr>
 
 <tr> <td align="left">compat/java.net/GetSocketOptionInfo.java</td> <td>unmerged</td> <td></td>  </tr>
@@ -184,9 +184,9 @@
 <tr> <td align="left">java/beans/beancontext/BeanContextServicesListener.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/BlockDataException.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/BufferedInputStream.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/BufferedOutputStream.java</td> <td>merged</td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/io/BufferedOutputStream.java</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
 <tr> <td align="left">java/io/BufferedReader.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/BufferedWriter.java</td> <td>merged</td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/io/BufferedWriter.javad</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
 <tr> <td align="left">java/io/ByteArrayInputStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/ByteArrayOutputStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/CharArrayReader.java</td> <td>unmerged</td> <td></td>  </tr>
@@ -234,10 +234,10 @@
 <tr> <td align="left">java/io/OptionalDataException.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/OutputStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/OutputStreamWriter.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedInputStream.java</td> <td>merged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedOutputStream.java</td> <td>merged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedReader.java</td> <td>merged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedWriter.java</td> <td>merged</td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/io/PipedInputStream.java</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/io/PipedOutputStream.java</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/io/PipedReader.java</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/io/PipedWriter.java</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
 <tr> <td align="left">java/io/PrintStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/PrintWriter.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/PushbackInputStream.java</td> <td>unmerged</td> <td></td>  </tr>
@@ -320,12 +320,12 @@
 <tr> <td align="left">java/lang/Short.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/lang/StackOverflowError.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/lang/String.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td fgcolor="green" align="left">java/lang/StringBuffer.java</td> <td fgcolor="green">merged</td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/lang/StringBuffer.java</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
 <tr> <td align="left">java/lang/StringIndexOutOfBoundsException.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/lang/System.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/lang/Thread.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/lang/ThreadDeath.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td fgcolor="green" align="left">java/lang/ThreadGroup.java</td> <td fgcolor="green">merged</td> <td></td>  </tr>
+<tr> <td align="left"><font color="green">java/lang/ThreadGroup.java</font></td> <td><font color="green">merged</font></td> <td></td>  </tr>
 <tr> <td align="left">java/lang/Throwable.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/lang/UnknownError.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/lang/UnsatisfiedLinkError.java</td> <td>unmerged</td> <td></td>  </tr>
