--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -20,8 +20,8 @@ The new package is now JDK 1.2 compliant, and much more complete.
 <b>March 25, 2001</b>
 </td><td>
 It is now possible to call methods on Java interface references from C++ code
-via <A HREF="papers/cni/t1.html">CNI</A>, thanks to Bryce McKinlay's compiler
-work. <A HREF=http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01483.html>Details.</A>
+via <a href="papers/cni/t1.html">CNI</a>, thanks to Bryce McKinlay's compiler
+work. <a href="http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01483.html">Details.</a>
 </td></tr>
 
 <tr><td valign="top">
@@ -46,7 +46,7 @@ find bugs!
 <b>February 8, 2001</b>
 </td><td>
 Made use of Warren Levy's change to the
-<A HREF="http://sources.redhat.com/mauve/">Mauve test suite</A> to handle
+<a href="http://sources.redhat.com/mauve/">Mauve test suite</a> to handle
 regressions.
 Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
 <tt>xfails</tt> file of known library failures from the source tree
@@ -54,9 +54,9 @@ to the directory where the libjava <tt>'make check'</tt> is being run.
 This allows the testsuite to ignore <tt>XFAIL</tt>s and thus highlight
 true regressions in the library.  The Mauve tests are
 <a href="test.html">automatically run</a> as part of a libjava
-<TT>'make check'</TT> as long as the Mauve suite is accessible
-and the env var <TT>MAUVEDIR</TT> is set to point to the top-level
-of the <A HREF="http://sources.redhat.com/mauve/download.html">Mauve source</A>.
+<tt>'make check'</tt> as long as the Mauve suite is accessible
+and the env var <tt>MAUVEDIR</tt> is set to point to the top-level
+of the <a href="http://sources.redhat.com/mauve/download.html">Mauve source</a>.
 </td></tr>
 
 <tr><td valign="top">
@@ -94,20 +94,20 @@ Thanks to Richard Henderson's recent <code>libffi</code> changes, the
 <tr><td valign="top">
 <b>December 9, 2000</b>
 </td><td>
-The libgcj sources have <A HREF="http://gcc.gnu.org/ml/java/2000-12/msg00102.html">
-migrated</A> to the gcc repository. We've imported
-<A HREF="http://sourceforge.net/projects/fastjar">fastjar</A> in our
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">tree</A>
+The libgcj sources have <a href="http://gcc.gnu.org/ml/java/2000-12/msg00102.html">
+migrated</a> to the gcc repository. We've imported
+<a href="http://sourceforge.net/projects/fastjar">fastjar</a> in our
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">tree</a>
 and use it as a replacement to zip.  </td></tr>
 
 <tr><td valign="top">
 <b>December 8, 2000</b>
 </td><td>
-The libgcj repository is now <A HREF="http://gcc.gnu.org/ml/java/2000-12/msg00095.html">
-closed</A>: We're moving our sources over to the gcc
-<A HREF="http://gcc.gnu.org/ml/java-announce/2000/msg00003.html">
-tree</A>. Read <A HREF="http://gcc.gnu.org/cvs.html">here</A> and 
-<A HREF="http://gcc.gnu.org/cvswrite.html">here</A> how you will soon check
+The libgcj repository is now <a href="http://gcc.gnu.org/ml/java/2000-12/msg00095.html">
+closed</a>: We're moving our sources over to the gcc
+<a href="http://gcc.gnu.org/ml/java-announce/2000/msg00003.html">
+tree</a>. Read <a href="http://gcc.gnu.org/cvs.html">here</a> and 
+<a href="http://gcc.gnu.org/cvswrite.html">here</a> how you will soon check
 your sources out.
 </td></tr>
 
@@ -154,8 +154,8 @@ also been working on AWT.
 Bryce McKinlay checked in a patch that enables bitmap-descriptor based 
 marking in the garbage collector. This code includes work by
 Tom Tromey and Hans Boehm, and results in some significant 
-<A HREF="http://gcc.gnu.org/ml/java-patches/2000-q3/msg00161.html">
-performance gains</A> in memory-intensive code.
+<a href="http://gcc.gnu.org/ml/java-patches/2000-q3/msg00161.html">
+performance gains</a> in memory-intensive code.
 </td></tr>
 
 <tr><td valign="top">
@@ -198,9 +198,9 @@ gcj.
 <tr><td valign="top">
 <b>June 27, 2000</b>
 </td><td>
-A new <A HREF="done.html">Done with GCJ</A> section was added.
-Send your GCJ stories <A HREF="mailto:java@gcc.gnu.org">
-here</A>.
+A new <a href="done.html">Done with GCJ</a> section was added.
+Send your GCJ stories <a href="mailto:java@gcc.gnu.org">
+here</a>.
 </td></tr>
 
 <tr><td valign="top">
@@ -208,11 +208,11 @@ here</A>.
 </td><td>
 Today we merged some major work done at Red Hat.  This included:
 <ul>
-<li> Substantial work for the IA-64 port.
-<li> <code>java.beans</code> from <a href="http://www.gnu.org/software/classpath/">Classpath</a>.
+<li> Substantial work for the IA-64 port.</li>
+<li> <code>java.beans</code> from <a href="http://www.gnu.org/software/classpath/">Classpath</a>.</li>
 <li> A somewhat modified initial implementation of serialization.
-     (This is known not to interoperate with other implementations yet.)
-<li> Miscellaneous bug fixes.
+     (This is known not to interoperate with other implementations yet.)</li>
+<li> Miscellaneous bug fixes.</li>
 </ul>
 </td></tr>
 
