* gcj-3.1-status.html (i386-*-freebsed*): Now builds ok, but fails 	many tests.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -27,7 +27,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 </tr>
 
 <tr> <td>i386-*-freebsd*</td>
-     <td> <a href="http://gcc.gnu.org/ml/java/2002-03/msg00436.html">Build failure</a> </td>
+     <td> Builds ok; <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00284.html">many test failures</a> </td>
      <td> Loren James Rittle </td>
 </tr>
 
