--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -124,6 +124,13 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
  <td>Many unexpected failures for Fortran: 481 and ObjC: 467.</td>
 </tr>
 
+<tr valign="top">
+ <td>v850-elf</td>
+ <td>v850-sim</td>
+ <td>2002-03-25</td>
+ <td>CC0 target.</td>
+</tr>
+
 </table>
 </body>
 </html>
