--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -185,7 +185,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00881.html">3.0</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01292.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01292.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01349.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -245,7 +246,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i386-pc-sco3.2v5.0.5</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00141.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00141.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01580.html">3.0.4</a></td>
 </tr>
 
 <tr>
