--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -519,7 +519,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-cygwin</td>
 <td>Cygwin-1.3.10 on Windows 2000 5.0</td>
 <td>Successful (C, C++):
-<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00197.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00197.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01602.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -1024,13 +1025,21 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01021.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01173.html">3.0.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00289.html">3.0.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01345.html">3.0.4</a>;
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01345.html">3.0.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01374.html">3.0.4</a>;
 <br />Successful (C,C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01343.html">3.0.4</a>;
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00537.html">3.0.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00467.html">3.0.4</a>
 </td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01605.html">3.0.4</a></td>
 </tr>
 
 <tr>
