--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -235,6 +235,9 @@ Not supported</p>
 <p><b>sparc-sun-sunos4.1.3</b><br />
 Successful</p>
 
+<p><b>sparc-sun-sunos4.1.3_U1</b><br />
+Successful</p>
+
 <p><b>sparc-sun-sunos4.1.4</b><br />
 Successful</p>
 
